# Typocalypse

./: .gitignore  CMakeLists.txt  main.cpp
include/: bullet.h  bullet_state_machine.h  camera.h  enemy.h  enemy_state.h  enemy_state_machine.h  global.h  model.h  player.h  player_state.h  player_state_machine.h  shader.h  state.h  state_machine.h  texture.h  vertex.h
include/bullet/: bullet.h  bullet_state.h
include/bullet/bullet_state/: die_state.h  flying_state.h  onhit_state.h
include/display/: display.h  display_element.h  display_state.h  display_state_machine.h
include/display/display_item/: display_model.h  display_text.h
include/display/display_state/: main_state.h
include/enemy/: enemy.h  enemy_abstract.h  enemy_state.h
include/enemy/enemy_state/: charge_state.h  die_state.h  freeze_state.h  move_state.h  respawn_state.h
include/enemy/enemy_type/: charge_enemy.h  creep_enemy.h
include/glad/: glad.h
include/global/: global.h  global_state.h  global_state_machine.h  player_data.h
include/global/global_state/: gameover_state.h  menu_state.h  play_state.h
include/menu/: menu.h  menu_element.h  menu_state.h  menu_state_machine.h
include/menu/menu_item/: menu_model.h  text.h
include/menu/menu_state/: main_state.h
include/perk/: perk.h  perk_effect.h  perk_effect_type.h  perk_system.h
include/player/: player.h  player_state.h
include/player/player_state/: die_state.h  idle_state.h
include/pool/: bullet_pool.h  charge_enemy_pool.h  creep_enemy_pool.h
include/resource_manager/: resource_manager.h
include/stb/: stb_perlin.h
include/utilities/: AABB.h  check_word.h  font_size.h  genMesh.h  init.h  resource_enum.h  shader_type.h  spawn_enemy.h  text_match.h  text_renderer.h
resources/: resource.rm
resources/models/: charge_enemy.model  creep_enemy.model  logo.model  player.model
resources/shaders/: basic.frag  basic.vert  text.vert  ui.frag  ui.vert
src/: bullet.cpp  bullet_state.cpp  camera.cpp  enemy.cpp  enemy_state.cpp  enemy_state_machine.cpp  genMesh.cpp  glad.c  global_state.cpp  global_state_machine.cpp  init.cpp  model.cpp  player.cpp  player_state.cpp  player_state_machine.cpp  shader.cpp  spawn_enemy.cpp  text_render.cpp  texture.cpp
src/bullet/: bullet.cpp  bullet_state_machine.cpp
src/bullet/bullet_state/: die_state.cpp  flying_state.cpp  onhit_state.cpp
src/display/: display.cpp  display_state_machine.cpp
src/display/display_state/: main_state.cpp
src/enemy/: enemy_state.cpp  enemy_state_machine.cpp
src/enemy/enemy_state/: charge_state.cpp  die_state.cpp  freeze_state.cpp  move_state.cpp  respawn_state.cpp
src/global/: global.cpp  global_state.cpp  global_state_machine.cpp  player_data.cpp
src/menu/: menu.cpp  menu_state_machine.cpp
src/perk/: perk_system.cpp
src/player/: player.cpp  player_state.cpp  player_state_machine.cpp
src/pool/: bullet_pool.cpp  charge_enemy_pool.cpp  creep_enemy_pool.cpp
src/resource_manager/: resource_manager.cpp
src/utilities/: genMesh.cpp  init.cpp  spawn_enemy.cpp  text_render.cpp
(+8 files in other folders)
